--- a/Infatlan_Kanban/Infatlan_Kanban.csproj
+++ b/Infatlan_Kanban/Infatlan_Kanban.csproj
@@ -353,6 +353,7 @@
     <Content Include="assets\icons\weather-icons\less\css\variables-night.css" />
     <Content Include="assets\icons\weather-icons\less\css\variables-time.css" />
     <Content Include="assets\icons\weather-icons\less\css\variables-wind-names.css" />
+    <Content Include="assets\images\2.JPG" />
     <Content Include="assets\images\alert\alert.png" />
     <Content Include="assets\images\alert\alert2.png" />
     <Content Include="assets\images\alert\alert3.png" />
@@ -387,6 +388,7 @@
     <Content Include="assets\images\browser\photoshop.jpg" />
     <Content Include="assets\images\browser\safari-logo.png" />
     <Content Include="assets\images\browser\sketch.jpg" />
+    <Content Include="assets\images\Captura.JPG" />
     <Content Include="assets\images\custom-select.png" />
     <Content Include="assets\images\eliteadmin-logo.png" />
     <Content Include="assets\images\eliteadmin-small-text.png" />
@@ -3211,6 +3213,7 @@
     <Content Include="assets\images\property\prop6.jpg" />
     <Content Include="assets\images\property\prop7.jpg" />
     <Content Include="assets\images\property\prop8.jpg" />
+    <Content Include="assets\images\texto_logo_azul.png" />
     <Content Include="assets\images\tooltip\Euclid.png" />
     <Content Include="assets\images\tooltip\shape1.svg" />
     <Content Include="assets\images\tooltip\shape2.svg" />
@@ -5236,7 +5239,6 @@
     <Content Include="assets\node_modules\select2\dist\js\select2.full.min.js" />
     <Content Include="assets\node_modules\select2\dist\js\select2.js" />
     <Content Include="assets\node_modules\select2\dist\js\select2.min.js" />
-    <Content Include="assets\node_modules\select2\dist\select2.full.min.js" />
     <Content Include="assets\node_modules\select2\docs\announcements-4.0.html" />
     <Content Include="assets\node_modules\select2\docs\browserconfig.xml" />
     <Content Include="assets\node_modules\select2\docs\community.html" />
@@ -6055,12 +6057,17 @@
     <Content Include="images\add.png" />
     <Content Include="images\busqueda.png" />
     <Content Include="images\calendario.png" />
+    <Content Include="images\delete-file.png" />
     <Content Include="images\descarga.png" />
+    <Content Include="images\edit-file.png" />
     <Content Include="images\editar.png" />
     <Content Include="images\favicon.fw.png" />
     <Content Include="images\favicon_blanco.fw.png" />
+    <Content Include="images\file-complete.png" />
+    <Content Include="images\GestionesTecnicas.JPG" />
     <Content Include="images\grafico.png" />
     <Content Include="images\logo_texto_blanco.png" />
+    <Content Include="images\new_file.png" />
     <Content Include="images\remove.png" />
     <Content Include="images\vistaPrevia.png" />
     <Content Include="pages\creacionTareas.aspx" />
@@ -7267,6 +7274,111 @@
     <Content Include="assets\images\node_module\typeahead.js-master\README.md" />
     <Content Include="assets\images\node_module\typeahead.js-master\test\ci" />
     <Content Include="assets\images\node_module\typeahead.js-master\typeahead.js.jquery.json" />
+    <Content Include="assets\package.json" />
+    <Content Include="assets\README.md" />
+    <Content Include="css\fonts\fontawesome-webfont.ttf" />
+    <Content Include="css\fonts\icomoon.ttf" />
+    <Content Include="css\fonts\Material-Design-Iconic-Font.ttf" />
+    <Content Include="css\fonts\materialdesignicons-webfont.ttf" />
+    <Content Include="css\fonts\Simple-Line-Icons.ttf" />
+    <Content Include="css\fonts\themify.ttf" />
+    <Content Include="dist\css\fonts\fontawesome-webfont.ttf" />
+    <Content Include="dist\css\fonts\icomoon.ttf" />
+    <Content Include="dist\css\fonts\Material-Design-Iconic-Font.ttf" />
+    <Content Include="dist\css\fonts\materialdesignicons-webfont.ttf" />
+    <Content Include="dist\css\fonts\Simple-Line-Icons.ttf" />
+    <Content Include="dist\css\fonts\themify.ttf" />
+    <Content Include="dist\scss\colors\blue-dark.scss" />
+    <Content Include="dist\scss\colors\blue.scss" />
+    <Content Include="dist\scss\colors\default-dark.scss" />
+    <Content Include="dist\scss\colors\default.scss" />
+    <Content Include="dist\scss\colors\green-dark.scss" />
+    <Content Include="dist\scss\colors\green.scss" />
+    <Content Include="dist\scss\colors\megna-dark.scss" />
+    <Content Include="dist\scss\colors\megna.scss" />
+    <Content Include="dist\scss\colors\purple-dark.scss" />
+    <Content Include="dist\scss\colors\purple.scss" />
+    <Content Include="dist\scss\colors\red-dark.scss" />
+    <Content Include="dist\scss\colors\red.scss" />
+    <Content Include="dist\scss\core\animation.scss" />
+    <Content Include="dist\scss\core\app.scss" />
+    <Content Include="dist\scss\core\buttons.scss" />
+    <Content Include="dist\scss\core\core.scss" />
+    <Content Include="dist\scss\core\form-pages.scss" />
+    <Content Include="dist\scss\core\header.scss" />
+    <Content Include="dist\scss\core\other-common.scss" />
+    <Content Include="dist\scss\core\pagination.scss" />
+    <Content Include="dist\scss\core\perfect-scrollbar.scss" />
+    <Content Include="dist\scss\core\right-sidebar.scss" />
+    <Content Include="dist\scss\core\scafholding.scss" />
+    <Content Include="dist\scss\core\sidebar.scss" />
+    <Content Include="dist\scss\core\spinner.scss" />
+    <Content Include="dist\scss\core\table-pages.scss" />
+    <Content Include="dist\scss\core\theme-settings.scss" />
+    <Content Include="dist\scss\custom.scss" />
+    <Content Include="dist\scss\pages\bootstrap-switch.scss" />
+    <Content Include="dist\scss\pages\breadcrumb-page.scss" />
+    <Content Include="dist\scss\pages\chat-app-page.scss" />
+    <Content Include="dist\scss\pages\contact-app-page.scss" />
+    <Content Include="dist\scss\pages\dashboard1.scss" />
+    <Content Include="dist\scss\pages\dashboard2.scss" />
+    <Content Include="dist\scss\pages\dashboard3.scss" />
+    <Content Include="dist\scss\pages\dashboard4.scss" />
+    <Content Include="dist\scss\pages\easy-pie-chart.scss" />
+    <Content Include="dist\scss\pages\error-pages.scss" />
+    <Content Include="dist\scss\pages\file-upload.scss" />
+    <Content Include="dist\scss\pages\float-chart.scss" />
+    <Content Include="dist\scss\pages\floating-label.scss" />
+    <Content Include="dist\scss\pages\footable-page.scss" />
+    <Content Include="dist\scss\pages\form-icheck.scss" />
+    <Content Include="dist\scss\pages\google-vector-map.scss" />
+    <Content Include="dist\scss\pages\icon-page.scss" />
+    <Content Include="dist\scss\pages\inbox.scss" />
+    <Content Include="dist\scss\pages\login-register-lock.scss" />
+    <Content Include="dist\scss\pages\other-pages.scss" />
+    <Content Include="dist\scss\pages\pricing-page.scss" />
+    <Content Include="dist\scss\pages\progressbar-page.scss" />
+    <Content Include="dist\scss\pages\register3.scss" />
+    <Content Include="dist\scss\pages\ribbon-page.scss" />
+    <Content Include="dist\scss\pages\stylish-tooltip.scss" />
+    <Content Include="dist\scss\pages\tab-page.scss" />
+    <Content Include="dist\scss\pages\timeline-vertical-horizontal.scss" />
+    <Content Include="dist\scss\pages\ui-bootstrap-page.scss" />
+    <Content Include="dist\scss\pages\user-card.scss" />
+    <Content Include="dist\scss\pages\widget-page.scss" />
+    <Content Include="dist\scss\responsive.scss" />
+    <Content Include="dist\scss\style.scss" />
+    <Content Include="dist\scss\variable.scss" />
+    <Content Include="dist\scss\widgets\activity.scss" />
+    <Content Include="dist\scss\widgets\blog.scss" />
+    <Content Include="dist\scss\widgets\calendar.scss" />
+    <Content Include="dist\scss\widgets\carousel.scss" />
+    <Content Include="dist\scss\widgets\chat-widget.scss" />
+    <Content Include="dist\scss\widgets\comment.scss" />
+    <Content Include="dist\scss\widgets\common-widget.scss" />
+    <Content Include="dist\scss\widgets\contact.scss" />
+    <Content Include="dist\scss\widgets\feed.scss" />
+    <Content Include="dist\scss\widgets\msg-box.scss" />
+    <Content Include="dist\scss\widgets\news-slide.scss" />
+    <Content Include="dist\scss\widgets\product-review.scss" />
+    <Content Include="dist\scss\widgets\profile.scss" />
+    <Content Include="dist\scss\widgets\social.scss" />
+    <Content Include="dist\scss\widgets\steamline.scss" />
+    <Content Include="dist\scss\widgets\to-do.scss" />
+    <Content Include="dist\scss\widgets\topbar-mail.scss" />
+    <Content Include="dist\scss\widgets\weather-widget.scss" />
+    <Content Include="dist\scss\widgets\widgets.scss" />
+    <Content Include="bin\Infatlan_Kanban.dll.config" />
+    <Content Include="bin\roslyn\csc.exe.config" />
+    <Content Include="bin\roslyn\csc.rsp" />
+    <Content Include="bin\roslyn\csi.exe.config" />
+    <Content Include="bin\roslyn\csi.rsp" />
+    <Content Include="bin\roslyn\Microsoft.CSharp.Core.targets" />
+    <Content Include="bin\roslyn\Microsoft.Managed.Core.targets" />
+    <Content Include="bin\roslyn\Microsoft.VisualBasic.Core.targets" />
+    <Content Include="bin\roslyn\vbc.exe.config" />
+    <Content Include="bin\roslyn\vbc.rsp" />
+    <Content Include="bin\roslyn\VBCSCompiler.exe.config" />
     <Content Include="assets\node_modules\bootstrap-material-datetimepicker\.gitignore" />
     <Content Include="assets\node_modules\bootstrap-material-datetimepicker\bower.json" />
     <Content Include="assets\node_modules\bootstrap-material-datetimepicker\font\Material-Design-Icons.eot" />
@@ -8109,111 +8221,7 @@
     <Content Include="assets\node_modules\typeahead.js-master\README.md" />
     <Content Include="assets\node_modules\typeahead.js-master\test\ci" />
     <Content Include="assets\node_modules\typeahead.js-master\typeahead.js.jquery.json" />
-    <Content Include="assets\package.json" />
-    <Content Include="assets\README.md" />
-    <Content Include="css\fonts\fontawesome-webfont.ttf" />
-    <Content Include="css\fonts\icomoon.ttf" />
-    <Content Include="css\fonts\Material-Design-Iconic-Font.ttf" />
-    <Content Include="css\fonts\materialdesignicons-webfont.ttf" />
-    <Content Include="css\fonts\Simple-Line-Icons.ttf" />
-    <Content Include="css\fonts\themify.ttf" />
-    <Content Include="dist\css\fonts\fontawesome-webfont.ttf" />
-    <Content Include="dist\css\fonts\icomoon.ttf" />
-    <Content Include="dist\css\fonts\Material-Design-Iconic-Font.ttf" />
-    <Content Include="dist\css\fonts\materialdesignicons-webfont.ttf" />
-    <Content Include="dist\css\fonts\Simple-Line-Icons.ttf" />
-    <Content Include="dist\css\fonts\themify.ttf" />
-    <Content Include="dist\scss\colors\blue-dark.scss" />
-    <Content Include="dist\scss\colors\blue.scss" />
-    <Content Include="dist\scss\colors\default-dark.scss" />
-    <Content Include="dist\scss\colors\default.scss" />
-    <Content Include="dist\scss\colors\green-dark.scss" />
-    <Content Include="dist\scss\colors\green.scss" />
-    <Content Include="dist\scss\colors\megna-dark.scss" />
-    <Content Include="dist\scss\colors\megna.scss" />
-    <Content Include="dist\scss\colors\purple-dark.scss" />
-    <Content Include="dist\scss\colors\purple.scss" />
-    <Content Include="dist\scss\colors\red-dark.scss" />
-    <Content Include="dist\scss\colors\red.scss" />
-    <Content Include="dist\scss\core\animation.scss" />
-    <Content Include="dist\scss\core\app.scss" />
-    <Content Include="dist\scss\core\buttons.scss" />
-    <Content Include="dist\scss\core\core.scss" />
-    <Content Include="dist\scss\core\form-pages.scss" />
-    <Content Include="dist\scss\core\header.scss" />
-    <Content Include="dist\scss\core\other-common.scss" />
-    <Content Include="dist\scss\core\pagination.scss" />
-    <Content Include="dist\scss\core\perfect-scrollbar.scss" />
-    <Content Include="dist\scss\core\right-sidebar.scss" />
-    <Content Include="dist\scss\core\scafholding.scss" />
-    <Content Include="dist\scss\core\sidebar.scss" />
-    <Content Include="dist\scss\core\spinner.scss" />
-    <Content Include="dist\scss\core\table-pages.scss" />
-    <Content Include="dist\scss\core\theme-settings.scss" />
-    <Content Include="dist\scss\custom.scss" />
-    <Content Include="dist\scss\pages\bootstrap-switch.scss" />
-    <Content Include="dist\scss\pages\breadcrumb-page.scss" />
-    <Content Include="dist\scss\pages\chat-app-page.scss" />
-    <Content Include="dist\scss\pages\contact-app-page.scss" />
-    <Content Include="dist\scss\pages\dashboard1.scss" />
-    <Content Include="dist\scss\pages\dashboard2.scss" />
-    <Content Include="dist\scss\pages\dashboard3.scss" />
-    <Content Include="dist\scss\pages\dashboard4.scss" />
-    <Content Include="dist\scss\pages\easy-pie-chart.scss" />
-    <Content Include="dist\scss\pages\error-pages.scss" />
-    <Content Include="dist\scss\pages\file-upload.scss" />
-    <Content Include="dist\scss\pages\float-chart.scss" />
-    <Content Include="dist\scss\pages\floating-label.scss" />
-    <Content Include="dist\scss\pages\footable-page.scss" />
-    <Content Include="dist\scss\pages\form-icheck.scss" />
-    <Content Include="dist\scss\pages\google-vector-map.scss" />
-    <Content Include="dist\scss\pages\icon-page.scss" />
-    <Content Include="dist\scss\pages\inbox.scss" />
-    <Content Include="dist\scss\pages\login-register-lock.scss" />
-    <Content Include="dist\scss\pages\other-pages.scss" />
-    <Content Include="dist\scss\pages\pricing-page.scss" />
-    <Content Include="dist\scss\pages\progressbar-page.scss" />
-    <Content Include="dist\scss\pages\register3.scss" />
-    <Content Include="dist\scss\pages\ribbon-page.scss" />
-    <Content Include="dist\scss\pages\stylish-tooltip.scss" />
-    <Content Include="dist\scss\pages\tab-page.scss" />
-    <Content Include="dist\scss\pages\timeline-vertical-horizontal.scss" />
-    <Content Include="dist\scss\pages\ui-bootstrap-page.scss" />
-    <Content Include="dist\scss\pages\user-card.scss" />
-    <Content Include="dist\scss\pages\widget-page.scss" />
-    <Content Include="dist\scss\responsive.scss" />
-    <Content Include="dist\scss\style.scss" />
-    <Content Include="dist\scss\variable.scss" />
-    <Content Include="dist\scss\widgets\activity.scss" />
-    <Content Include="dist\scss\widgets\blog.scss" />
-    <Content Include="dist\scss\widgets\calendar.scss" />
-    <Content Include="dist\scss\widgets\carousel.scss" />
-    <Content Include="dist\scss\widgets\chat-widget.scss" />
-    <Content Include="dist\scss\widgets\comment.scss" />
-    <Content Include="dist\scss\widgets\common-widget.scss" />
-    <Content Include="dist\scss\widgets\contact.scss" />
-    <Content Include="dist\scss\widgets\feed.scss" />
-    <Content Include="dist\scss\widgets\msg-box.scss" />
-    <Content Include="dist\scss\widgets\news-slide.scss" />
-    <Content Include="dist\scss\widgets\product-review.scss" />
-    <Content Include="dist\scss\widgets\profile.scss" />
-    <Content Include="dist\scss\widgets\social.scss" />
-    <Content Include="dist\scss\widgets\steamline.scss" />
-    <Content Include="dist\scss\widgets\to-do.scss" />
-    <Content Include="dist\scss\widgets\topbar-mail.scss" />
-    <Content Include="dist\scss\widgets\weather-widget.scss" />
-    <Content Include="dist\scss\widgets\widgets.scss" />
-    <Content Include="bin\Infatlan_Kanban.dll.config" />
-    <Content Include="bin\roslyn\csc.exe.config" />
-    <Content Include="bin\roslyn\csc.rsp" />
-    <Content Include="bin\roslyn\csi.exe.config" />
-    <Content Include="bin\roslyn\csi.rsp" />
-    <Content Include="bin\roslyn\Microsoft.CSharp.Core.targets" />
-    <Content Include="bin\roslyn\Microsoft.Managed.Core.targets" />
-    <Content Include="bin\roslyn\Microsoft.VisualBasic.Core.targets" />
-    <Content Include="bin\roslyn\vbc.exe.config" />
-    <Content Include="bin\roslyn\vbc.rsp" />
-    <Content Include="bin\roslyn\VBCSCompiler.exe.config" />
+    <Content Include="dist\scss\prepros-6.config" />
     <None Include="packages.config" />
     <Content Include="scss\colors\blue-dark.scss" />
     <Content Include="scss\colors\blue.scss" />
