--- a/Infatlan_Kanban/Web.config
+++ b/Infatlan_Kanban/Web.config
@@ -25,6 +25,10 @@
     <add key="SmtpServer" value="smtp.adbancat.hn"/>
     <add key="SmtpPort" value="25"/>
     <add key="SmtpFrom" value="reportes@bancatlan.hn"/>
+
+    <add key="RUTA_SERVER" value="C:/htdocs/kanban/pages/PlantillasSubidas"/>
+    
+    
     <add key="RHMail" value="egutierrez@bancatlan.hn"/>
   </appSettings>
   
